--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 :root{
 	--primary-color : #007AF3;
+	--secondary-color: #20272E;
 }
 *{
 	margin: 0;
@@ -162,4 +163,39 @@ iframe{
 	width: 100%;
 	height: 300px;
 }
+/* Mobile navigation design */
+nav{
+	position: fixed;
+	right: 0;
+	background: var(--secondary-color);
+	color: white;
+	height: 100vh;
+	width: 60%;
+	padding: 1.5em 1em;
+	top: 0;
+	z-index: 999;
+}
+nav .primary-nav{
+	margin-top: 5em;
+}
+.nav-bar li{
+	padding: .5em .6em;
+}
+.nav-bar li a{
+	color: white;
+	display: block;
+	text-decoration: none;
+	text-align: center;
+	font-size: 1.1em;
+
+}
+.nav-bar li a:hover{
+	font-weight: bold;
+}
+
+.mobile-menu-exit{
+	float: right;
+	cursor: pointer;
+	margin: .5em;
+	}
 /*utilities*/
